hphp/test/zend/good/ext/intl/tests/msgfmt_parse.php.skipif
<?php
<<__EntryPoint>> function main() {
if( !extension_loaded( 'intl' ) ) print 'skip';
}
