hphp/test/zend/bad/ext/intl/tests/locale_get_display_script3.php.skipif
<?php if( !extension_loaded( 'intl' ) ) print 'skip'; ?>
<?php if(version_compare(INTL_ICU_VERSION, '49') < 0) print 'skip'; ?>